--- a/Index.css
+++ b/Index.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 * { 
      margin:0;
      padding:0 ; 
      box-sizing: border-box;
+     font-family: 'Poppins', sans-serif;
+     color: black;
 }
 html,Body {
      width:100%;
@@ -17,13 +21,51 @@ html,Body {
       
 }
 #signup {
-      max-width: 25svw;
-      min-height: 30svh;
-      backdrop-filter: blur(4px);
-      border: 4px solid white;
-      transform: translate(37svw,20svh);
+      max-width: 22svw;
+      height: 55svh;
+      backdrop-filter: blur(3px);
+      transform: translate(40svw,15svh);
+}
+#signup>form>legend {
+      font-size: 2svw;
+      text-align: center;
+      font-weight: 900;
 }
 
-&>#email{
+.name-h1{
+      font-size: 1.2svw;
+      text-align: center;
+}
+
+.name {
+      width: 15svw;
+      padding: 0svh 1svw;
+      border: 0.2svw black solid;
+      border-radius: 2svw;
+      margin: 0svh 3.5svw;
+
+}
+
+#checkbox{
+      font-size: 1svw;
+      position: relative;
+      left: 32svh;
+      top: 2svh;
+      border: 1px black solid;
+      width: 3svw;
+      background-color: white;
+      border-radius:30%;
+      cursor: pointer;
+      text-align: center;
+      font-weight: 900;
+}
+
+#submit{
+      border: 1px black solid;
+      transform: translate(9svw,2.4svh);
+      border-radius: 30%;
+      font-weight: 900;
+      padding: 3px;
+      font-size: 2svh;
       color: black;
 }
